; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_......shlrlz4lz4.c_LZ4_readLE16.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_......shlrlz4lz4.c_LZ4_readLE16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @LZ4_readLE16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @LZ4_readLE16(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call i64 (...) @LZ4_isLittleEndian()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @LZ4_read16(i8* %8)
  store i64 %9, i64* %2, align 8
  br label %23

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %4, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* %14, align 4
  %16 = sext i32 %15 to i64
  %17 = load i32*, i32** %4, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  %19 = load i32, i32* %18, align 4
  %20 = shl i32 %19, 8
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %16, %21
  store i64 %22, i64* %2, align 8
  br label %23

23:                                               ; preds = %10, %7
  %24 = load i64, i64* %2, align 8
  ret i64 %24
}

declare dso_local i64 @LZ4_isLittleEndian(...) #1

declare dso_local i64 @LZ4_read16(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
